# -course_work_3

./: README.md  main.py  pyproject.toml  settings.py
models/: data.py  operation.py
tests/: conftest.py  test_operation.py
