[tool.poetry]
name = "course-work-3"
version = "0.1.0"
description = ""
authors = ["TataynaSmychkova <Mella2005@rambler.ru>"]
readme = "README.md"
packages = [{include = "course_work_3"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
